JSAI/error/src/test/resources/base/k007.js
function foo() {
    arguments = 7;
    return arguments;
}

print(foo());
